--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -20,6 +20,12 @@
 </ul>
 
 <div id="gameName">Reveal game name</div>
+<p style="color: white" id="hidden">Pokemon Soulsilver</p>
+
+<hr>
+<form>
+    <input type="text" id="text" placeholder="Type Here">
+</form>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script type="text/javascript" language="JavaScript">
@@ -54,6 +60,17 @@
         function (){
             $(this).css('color', 'black')
         })
+    $('#hidden').hover(
+        function (){
+            $(this).css('color', 'black')
+        },
+        function () {
+            $(this).css('color', 'white')
+        })
+    $('#text').keypress( function (){
+        alert('Some key was pressed!!')
+    })
+
 </script>
 </body>
 </html>
