htmls forms completed

--- a/welcome.html
+++ b/welcome.html
@@ -5,12 +5,16 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
+   <link rel="stylesheet" href="./css/style.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
    <!--<h1>Hello World</h1>-->
 
 
-   <h1 id="top">Welcome to Veridian Dynamics!</h1>
+   <h1 id="top" class="fancyHeader">Welcome to Veridian Dynamics!</h1>
    <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong>technology</strong>.</p>
 
 
@@ -52,10 +56,10 @@
    <img src="./Photos/pexels-murat-ak-14566984.jpg" alt="">
 
 
-   <h2>Our Product</h2>
+   <h2 id="tHeader">Our Product</h2>
 
 
-   <table>
+   <table class="table">
        <tr>
            <th>Plan</th>
            <th>Price </th>
