completed flexbox exercises

--- a/css_selectors.html
+++ b/css_selectors.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>Selectors Exercise</title>
-    <link rel="stylesheet" href="css/selectors.css">
+<!--    <link rel="stylesheet" href="css/selectors.css">-->
+    <link rel="stylesheet" href="./css/selector2.css">
+    
 </head>
 <body>
     <div id="container">
