--- a/welcome.html
+++ b/welcome.html
@@ -5,16 +5,18 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
-   <link rel="stylesheet" href="./css/style.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<!--   <link rel="stylesheet" href="./css/style.css">-->
+    <link rel="stylesheet" href="./css/style2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+<!--   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">-->
 </head>
 <body>
    <!--<h1>Hello World</h1>-->
 
 
-   <h1 id="top" class="fancyHeader">Welcome to Veridian Dynamics!</h1>
+   <h1 id="top" class="fancy-Header">Welcome to Veridian Dynamics!</h1>
    <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong>technology</strong>.</p>
 
 
@@ -50,10 +52,10 @@
 
    <h2>Company Vision</h2>
   
-   <img src="./Photos/pexels-amber-janssens-11407391.jpg" alt="">
-   <img src="./Photos/pexels-dastan-khdir-13351559.jpg" alt="">
-   <img src="./Photos/pexels-elliot-ogbeiwi-15062110.jpg" alt="">
-   <img src="./Photos/pexels-murat-ak-14566984.jpg" alt="">
+<!--   <img src="./Photos/pexels-amber-janssens-11407391.jpg" alt="">-->
+<!--   <img src="./Photos/pexels-dastan-khdir-13351559.jpg" alt="">-->
+<!--   <img src="./Photos/pexels-elliot-ogbeiwi-15062110.jpg" alt="">-->
+<!--   <img src="./Photos/pexels-murat-ak-14566984.jpg" alt="">-->
 
 
    <h2 id="tHeader">Our Product</h2>
