Completed the bootstrap introduction exercise

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <!-- <nav>
             <ul>
                 <a href=""><li>Articles</li></a>
                 <a href=""><li>Products</li></a>
@@ -25,6 +25,21 @@
                 <a href=""><li>P</li></a>
                 <a href=""><li>O</li></a>
                 <a href=""><li>P</li></a>
+            </ul>
+        </nav> -->
+        <nav>
+            <ul>
+                <li><a href="">Articles</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Market</a></li>
+                <li><a href="">Jobs</a></li>
+            </ul>
+            <p><a href="">Logo</a></p>
+            <ul>
+                <li><a href="">Articles</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Market</a></li>
+                <li><a href="">Jobs</a></li>
             </ul>
         </nav>
     </header>
