--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -41,7 +41,7 @@
         var subHeader = document.getElementById('sub-header');
 
         // TODO: Set the text color of subHeader to blue
-        subHeader.style.color = 'blue';
+        subHeader.style.color = 'pink';
         // TODO: Uncomment the next line and get all list items
         var listItems = document.getElementsByTagName('li');
 
