--- a/weather_map.html
+++ b/weather_map.html
@@ -19,6 +19,11 @@
             display: flex;
             gap: 10px;
         }
+        #searchBox{
+            margin-top: 20px;
+            margin-bottom: 20px;
+            margin-left: 15px;
+        }
     </style>
 </head>
 <body>
@@ -73,6 +78,8 @@
                     '</div>';
                 $('#container').html(html)
             }
+
+
         });
     }
 
@@ -82,7 +89,10 @@
         style: 'mapbox://styles/mapbox/streets-v12', // style URL
         center: [-96.796, 32.776], // starting position [lng, lat]
         zoom: 11, // starting zoom
+
+
     });
+
     updateCards( -96.796, 32.776)
 
     map.on('click', function (e){
@@ -96,6 +106,9 @@
         location.then( (result) => {
            updateCards(result[0], result[1])
             map.setCenter([result[0], result[1]])
+            const marker = new mapboxgl.Marker()
+                .setLngLat([result[0], result[1]])
+                .addTo(map)
         })
     })
 
